Part of Silver Challenge solution: 1. Button drawn in code with triggering GPS search 2. GPS search logic with CoreLocation

--- a/WorldTrotterBNR/Info.plist
+++ b/WorldTrotterBNR/Info.plist
@@ -34,6 +34,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app lets you keep track of important places to you. It needs access to the GPS coordinates for your location.</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
